# WikCrawler

./: OUTPUT.txt  README.md  pyproject.toml  requirements.txt
WikCrawler/: Crawler.py  __init__.py  info.py
test/: test.py
