[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "WikCrawler"
authors = [{name = "Manning Graham", email = "mcgraha@g.clemson.edu"}]
requires-python = ">=3.0"
dynamic = ["version", "description"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console"
]
dependencies = ["beautifulsoup4", "requests"]

[project.urls]
Home = "https://github.com/quipthaw/WikCrawler"

[project.scripts]
WikCrawler = "WikCrawler.Crawler:arguments"

[project.optional-dependencies]
dev = ["flit"]

[tool.flit.module]
name = "WikCrawler"